--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "word-counter",
+  "name": "ar-word-counter",
   "version": "1.0.0",
   "description": "this is word counter projects",
   "main": "index.js",
   "type": "module",
+  "publishConfig": {"access": "public"},
+  "bin": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
